<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_txt"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>

    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_selected_txt"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_show_mine"
        android:checkable="true"
        android:title="@string/show_my_poems_only_txt"
        app:showAsAction="never"/>

    <item android:id="@+id/action_toggle_fav"
        android:checkable="true"
        android:title="@string/show_favorites_only_txt"
        app:showAsAction="never"/>
</menu>