<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.misc.AboutAppFragment">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/clickable_std"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:contentDescription="@string/app_logo"
        android:src="@mipmap/ic_launcher_round"
        android:elevation="@dimen/std_space"
        android:id="@+id/logo"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/md_space"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:text="@string/app_name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/md_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/lateef"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:text="@string/terms_n_attribution"
        android:padding="@dimen/md_space"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>